@@ -1,6 +1,7 @@
 This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.
 
 - Remove unused VersionX::getChunk()
+- Fix creating snippet and chunk versions on MODX 3 [#121]
 
 
 
